--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ authors = ["kwantam <kwantam@gmail.com>"]
 
 homepage = "https://github.com/unicode-rs/unicode-normalization"
 repository = "https://github.com/unicode-rs/unicode-normalization"
-documentation = "http://unicode-rs.github.io/unicode-normalization/unicode-normalization"
+documentation = "https://unicode-rs.github.io/unicode-normalization"
 
 license = "MIT/Apache 2.0"
-keywords = ["text", "unicode", "normalization", "nfkc", "nfc", "nfkd", "nfd"]
+keywords = ["text", "unicode", "normalization", "decomposition", "recomposition"]
 readme = "README.md"
 description = """
 This crate provides functions for normalization of
