Link to docs.rs
This way we don't have to build custom docs anymore.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["kwantam <kwantam@gmail.com>"]
 
 homepage = "https://github.com/unicode-rs/unicode-normalization"
 repository = "https://github.com/unicode-rs/unicode-normalization"
-documentation = "https://unicode-rs.github.io/unicode-normalization"
+documentation = "https://docs.rs/unicode-normalization/"
 
 license = "MIT/Apache-2.0"
 keywords = ["text", "unicode", "normalization", "decomposition", "recomposition"]
