--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ Unicode Standard Annex #15.
 """
 
 exclude = [ "target/*", "Cargo.lock", "scripts/tmp", "*.txt" ]
+
+[dependencies]
+smallvec = "0.6"
