--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ sudo: false
 script:
   - cargo build --verbose
   - cargo test --verbose
+  - cargo package
+  - cd target/package/unicode-normalization-*
+  - cargo test --verbose
 notifications:
   email:
     on_success: never
