--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ Decomposition and Recomposition, as described in
 Unicode Standard Annex #15.
 """
 
+edition = "2018"
+
 exclude = [ "target/*", "Cargo.lock", "scripts/tmp", "*.txt", "tests/*" ]
 
 [dependencies.tinyvec]
