Add no_std + alloc support

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,11 @@ sudo: false
 script:
   - cargo build --verbose
   - cargo test --verbose
+  - cargo test --verbose --no-default-features
   - cargo package
   - cd target/package/unicode-normalization-*
   - cargo test --verbose
+  - cargo test --verbose --no-default-features
 notifications:
   email:
     on_success: never
