Make the decompose iterator avoid buffering elements past a starter.
Once the decompose iterator sees a starter, it should immediately start
returning characters from the preceeding sequence. If the input happens
to be stream-safe, it should never get more than MAX_NONSTARTERS + plus
boundary values ahead of its inner iterator.

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -17,5 +17,11 @@ path = "fuzz_targets/unicode-normalization.rs"
 test = false
 doc = false
 
+[[bin]]
+name = "streaming"
+path = "fuzz_targets/streaming.rs"
+test = false
+doc = false
+
 # Work around https://github.com/rust-lang/cargo/issues/8338
 [workspace]
