Fix #58, add cargo feature to remove liballoc

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,9 +24,9 @@ exclude = [ "target/*", "Cargo.lock", "scripts/tmp", "*.txt", "tests/*" ]
 
 [dependencies.tinyvec]
 version = "1"
-features = ["alloc"]
 
 
 [features]
-default = ["std"]
+default = ["std", "alloc"]
 std = []
+alloc = ["tinyvec/alloc"]
