--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ homepage = "https://github.com/unicode-rs/unicode-normalization"
 repository = "https://github.com/unicode-rs/unicode-normalization"
 documentation = "https://docs.rs/unicode-normalization/"
 
-license = "MIT/Apache-2.0"
+license = "MIT OR Apache-2.0"
 keywords = [
     "text",
     "unicode",
